# ZPP

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: tests.yml
data/: Taurus_LeoSoundLab_Roco_8-Pol_MX_crypt.zpp
examples/basics/: CMakeLists.txt  main.cpp
include/zpp/: file.hpp  read.hpp  zpp.hpp
src/: read.cpp
tests/: CMakeLists.txt  read.cpp
